--- a/Portfolio.css
+++ b/Portfolio.css
@@ -16,6 +16,12 @@ text-align: center;
 
 .header-section{
 text-align: center;
-background-image: url("https://thumbs.gfycat.com/DampLegitimateArabianoryx-size_restricted.gif");
-background-repeat:
+font-family: 'Righteous', cursive;
+background-image: url("https://thumbs.gfycat.com/DampLegitimateArabianoryx-size_restricted.gif"); 
+background-repeat:no-repeat;
+background-size: 1400px;
+}
+
+.resume{
+text-align: center;
 }
